update version and app.py

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *#*#
 *~
 build
+dist
 
 *.swp
 package-lock.json
@@ -12,8 +13,3 @@ __pycache__
 # CDK asset staging directory
 .cdk.staging
 cdk.out
-
-# loading resources
-resources*
-node_modules*
-package.json
